Ajout des routes de base pour GET/POST/PATCH/DELETE d'un tag
